--- a/contact.html
+++ b/contact.html
@@ -7,8 +7,8 @@
     <title>Marc Heo</title>
     <meta name="viewport" content="width=device-width, intial-scale=1.0">
     <link rel="stylesheet" href="styles/common.css">
-    <link rel="stylesheet" href="styles/home.css">
     <link rel="stylesheet" href="styles/footer.css">
+    <link rel="stylesheet" href="styles/contact.css">
     <script src="https://kit.fontawesome.com/dbed6b6114.js" crossorigin="anonymous"></script>
 </head>
 
@@ -30,9 +30,9 @@
             <div class="topnav" id="mytopnav">
                 <nav class="top-nav">
                     <ul>
-                        <li><a href="index.html" class="active">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="music.html">Music</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="contact.html" class="active">Contact</a></li>
                         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                             <i class="fa fa-bars"></i>
                         </a>
@@ -49,16 +49,7 @@
                 <h2 class="artist-name">I'm Marc Heo</h2>
                 <h3>Musician | Songwriter</h3>
                 <blockquote>
-                    In May 2022, Marc Heo challenged his capabilities and created a project within 2 weeks. He then took
-                    it to his social
-                    media and announced that his most anticipated EP ‘4ROM ME TO YOU – EP’ would be released within the
-                    month of May. During the month he released ‘Blue Sky’ as the lead single from
-                    the EP. He later released the track list consisting of 7 songs including artists
-                    like King Smooth & Cuba. He co-produced the project with K-Zen under
-                    Ndalo Records & Ninety9 Records. The project was officially released on the 31st of
-                    May 2022. It was followed by the EP launch event that was held at 673 Sports
-                    Bar, Aliwal North, Eastern Cape on June 3rd 2022. He was ranked 3rd in 9750 Top
-                    10 Artists.
+                    "I'm thankful for the struggles that made me who I am today."
                 </blockquote>
             </div>
 
@@ -83,78 +74,44 @@
     <!-- end of header -->
 
     <!-- main -->
-
-    <section id="media">
-        <div class="title">Latest Videos</div>
-        <div class="videos">
-            <div class="video">
-                <iframe width="100%" height="315" src="https://www.youtube.com/embed/yoRXbY0IJLs"
-                    title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
-            </div>
-            <div class="video">
-                <iframe width="100%" height="315" src="https://www.youtube.com/embed/O-fGgzm7ed4"
-                    title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
-            </div>
-            <div class="video">
-                <iframe width="100%" height="315" src="https://www.youtube.com/embed/9lpArH9PUgc"
-                    title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
-            </div>
-            <div class="video">
-                <iframe width="100%" height="315" src="https://www.youtube.com/embed/fosmih82mTU"
-                    title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
-            </div>
-        </div>
-    </section>
-    <div class="top-img">
-
-    </div>
-
-    <section class="section-two">
+    <section class="section-five">
         <div class="container">
-            <h2>FOLLOW ON INSTAGRAM</h2>
-            <span>@iammarcheo</span>
-            <div class="insta-imgs">
-                <div>
-                    <a href="https://www.instagram.com/iammarc_eo/">
-                        <img src="https://pbs.twimg.com/media/FXNePi6WIAEpwoz?format=jpg&name=large">
-                        <div class="icon-overlay flex">
-                            <i class="fab fa-instagram"></i>
-                        </div>
-                    </a>
-                </div>
-                <div>
-                    <a href="https://www.instagram.com/iammarc_eo/">
-                        <img src="https://pbs.twimg.com/media/FXNeKJMWAAAZBS8?format=jpg&name=large">
-                        <div class="icon-overlay flex">
-                            <i class="fab fa-instagram"></i>
-                        </div>
-                    </a>
+            <div class="contact-top">
+                <h3>CONTACT ME</h3>
+                <p>Let's work together...</p>
+            </div>
 
-                </div>
+            <div class="contact-middle">
                 <div>
-                    <a href="https://www.instagram.com/iammarc_eo/">
-                        <img src="https://pbs.twimg.com/media/FXNdgQ2WQAE2W1Y?format=jpg&name=large">
-                        <div class="icon-overlay flex">
-                            <i class="fab fa-instagram"></i>
-                        </div>
-                    </a>
+                    <span class="contact-icon">
+                        <i class="fas fa-map-signs"></i>
+                    </span>
+                    <span>Address</span>
+                    <p>Aliwal North, EC</p>
+                </div>
 
-                </div>
                 <div>
-                    <a href="https://www.instagram.com/iammarc_eo/">
-                        <img src="https://pbs.twimg.com/media/FXNeKCdX0AM36_c?format=jpg&name=large">
-                        <div class="icon-overlay flex">
-                            <i class="fab fa-instagram"></i>
-                        </div>
-                    </a>
+                    <span class="contact-icon">
+                        <i class="fas fa-phone"></i>
+                    </span>
+                    <span>Contact Number</span>
+                    <p>+27 68 599 7688</p>
+                </div>
+
+                <div>
+                    <span class="contact-icon">
+                        <i class="fas fa-paper-plane"></i>
+                    </span>
+                    <span>Email Address</span>
+                    <p>kgotsotheok@gmail.com</p>
+                </div>
+
+                <div>
+                    <span class="contact-icon">
+                        <i class="fas fa-globe"></i>
+                    </span>
+                    <span>Website</span>
+                    <p>www.officialmarcheo.com</p>
                 </div>
             </div>
         </div>
@@ -223,8 +180,17 @@
     </footer>
     <!-- end of footer -->
 
+    <script>
+        function myFunction() {
+            var x = document.getElementById("myTopnav");
+            if (x.className === "topnav") {
+                x.className += " responsive";
+            } else {
+                x.className = "topnav";
+            }
+        }
+    </script>
 
-    <script src="script.js"></script>
     <script>const showBtn = document.querySelector('.navBtn');
         const topNav = document.querySelector('.top-nav');
 
@@ -241,16 +207,7 @@
         /* Lightbox */
         var lightbox = new SimpleLightbox('.gallery a', { /* options */ });</script>
 
-    <script>
-        function myFunction() {
-            var x = document.getElementById("myTopnav");
-            if (x.className === "topnav") {
-                x.className += " responsive";
-            } else {
-                x.className = "topnav";
-            }
-        }
-    </script>
+
 </body>
 
 </html>
