--- a/music.html
+++ b/music.html
@@ -7,9 +7,10 @@
     <title>Marc Heo</title>
     <meta name="viewport" content="width=device-width, intial-scale=1.0">
     <link rel="stylesheet" href="styles/common.css">
-    <link rel="stylesheet" href="styles/home.css">
     <link rel="stylesheet" href="styles/footer.css">
+    <link rel="stylesheet" href="styles/music.css">
     <script src="https://kit.fontawesome.com/dbed6b6114.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="simplelightbox-master/dist/simple-lightbox.css">
 </head>
 
 <body>
@@ -30,8 +31,8 @@
             <div class="topnav" id="mytopnav">
                 <nav class="top-nav">
                     <ul>
-                        <li><a href="index.html" class="active">Home</a></li>
-                        <li><a href="music.html">Music</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="music.html" class="active">Music</a></li>
                         <li><a href="contact.html">Contact</a></li>
                         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                             <i class="fa fa-bars"></i>
@@ -49,16 +50,7 @@
                 <h2 class="artist-name">I'm Marc Heo</h2>
                 <h3>Musician | Songwriter</h3>
                 <blockquote>
-                    In May 2022, Marc Heo challenged his capabilities and created a project within 2 weeks. He then took
-                    it to his social
-                    media and announced that his most anticipated EP ‘4ROM ME TO YOU – EP’ would be released within the
-                    month of May. During the month he released ‘Blue Sky’ as the lead single from
-                    the EP. He later released the track list consisting of 7 songs including artists
-                    like King Smooth & Cuba. He co-produced the project with K-Zen under
-                    Ndalo Records & Ninety9 Records. The project was officially released on the 31st of
-                    May 2022. It was followed by the EP launch event that was held at 673 Sports
-                    Bar, Aliwal North, Eastern Cape on June 3rd 2022. He was ranked 3rd in 9750 Top
-                    10 Artists.
+                    "I'm thankful for the struggles that made me who I am today."
                 </blockquote>
             </div>
 
@@ -83,80 +75,29 @@
     <!-- end of header -->
 
     <!-- main -->
+    <section class="section-three">
+        <div class="container">
+            <div class="gallery">
+                <div class="single-img">
+                    <iframe width="100%" height="450" scrolling="no" frameborder="no" allow="autoplay"
+                        src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1446481075&color=%234d1635&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
+                </div>
 
-    <section id="media">
-        <div class="title">Latest Videos</div>
-        <div class="videos">
-            <div class="video">
-                <iframe width="100%" height="315" src="https://www.youtube.com/embed/yoRXbY0IJLs"
-                    title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
-            </div>
-            <div class="video">
-                <iframe width="100%" height="315" src="https://www.youtube.com/embed/O-fGgzm7ed4"
-                    title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
-            </div>
-            <div class="video">
-                <iframe width="100%" height="315" src="https://www.youtube.com/embed/9lpArH9PUgc"
-                    title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
-            </div>
-            <div class="video">
-                <iframe width="100%" height="315" src="https://www.youtube.com/embed/fosmih82mTU"
-                    title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
+                <div class="single-img">
+                    <iframe
+                        src="https://embed.music.apple.com/us/album/iwmnf-ep/1543252069?app=music&amp;itsct=music_box_player&amp;itscg=30200&amp;ls=1&amp;theme=dark"
+                        height="450px" frameborder="0"
+                        sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-top-navigation-by-user-activation"
+                        allow="autoplay *; encrypted-media *; clipboard-write"
+                        style="width: 100%; max-width: 660px; overflow: hidden; border-radius: 10px; background: transparent;"></iframe>
+                </div>
+
+                <div class="single-img">
+                    <iframe width="100%" height="450" scrolling="no" frameborder="no" allow="autoplay"
+                        src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1327219588&color=%234d1635&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
+                </div>
             </div>
         </div>
-    </section>
-    <div class="top-img">
-
-    </div>
-
-    <section class="section-two">
-        <div class="container">
-            <h2>FOLLOW ON INSTAGRAM</h2>
-            <span>@iammarcheo</span>
-            <div class="insta-imgs">
-                <div>
-                    <a href="https://www.instagram.com/iammarc_eo/">
-                        <img src="https://pbs.twimg.com/media/FXNePi6WIAEpwoz?format=jpg&name=large">
-                        <div class="icon-overlay flex">
-                            <i class="fab fa-instagram"></i>
-                        </div>
-                    </a>
-                </div>
-                <div>
-                    <a href="https://www.instagram.com/iammarc_eo/">
-                        <img src="https://pbs.twimg.com/media/FXNeKJMWAAAZBS8?format=jpg&name=large">
-                        <div class="icon-overlay flex">
-                            <i class="fab fa-instagram"></i>
-                        </div>
-                    </a>
-
-                </div>
-                <div>
-                    <a href="https://www.instagram.com/iammarc_eo/">
-                        <img src="https://pbs.twimg.com/media/FXNdgQ2WQAE2W1Y?format=jpg&name=large">
-                        <div class="icon-overlay flex">
-                            <i class="fab fa-instagram"></i>
-                        </div>
-                    </a>
-
-                </div>
-                <div>
-                    <a href="https://www.instagram.com/iammarc_eo/">
-                        <img src="https://pbs.twimg.com/media/FXNeKCdX0AM36_c?format=jpg&name=large">
-                        <div class="icon-overlay flex">
-                            <i class="fab fa-instagram"></i>
-                        </div>
-                    </a>
-                </div>
-            </div>
         </div>
     </section>
     <!-- end of main -->
@@ -223,9 +164,18 @@
     </footer>
     <!-- end of footer -->
 
-
     <script src="script.js"></script>
-    <script>const showBtn = document.querySelector('.navBtn');
+    <script>
+        function myFunction() {
+            var x = document.getElementById("myTopnav");
+            if (x.className === "topnav") {
+                x.className += " responsive";
+            } else {
+                x.className = "topnav";
+            }
+        }
+    </script>
+      <script>const showBtn = document.querySelector('.navBtn');
         const topNav = document.querySelector('.top-nav');
 
         showBtn.addEventListener('click', function () {
@@ -241,16 +191,6 @@
         /* Lightbox */
         var lightbox = new SimpleLightbox('.gallery a', { /* options */ });</script>
 
-    <script>
-        function myFunction() {
-            var x = document.getElementById("myTopnav");
-            if (x.className === "topnav") {
-                x.className += " responsive";
-            } else {
-                x.className = "topnav";
-            }
-        }
-    </script>
 </body>
 
 </html>
